Fixed one error

--- a/src/_component/landing-page/landing-page.scss
+++ b/src/_component/landing-page/landing-page.scss
@@ -52,7 +52,7 @@
 #default-message-radio:checked,
 .landing-page__box-message,
 .landing-page__box-header {
-    // display: none;
+    display: none;
 }
 
 .landing-page__box-body {
