About me section created

--- a/src/_component/landing-page/landing-page.pug
+++ b/src/_component/landing-page/landing-page.pug
@@ -1,6 +1,6 @@
 -
     var myFullName = 'Teh Chai Chong'
-    var myJobTitle = 'Rabbit Trainer'
+    var myJobTitle = 'Rabbit Tamer'
     var socialList = [
         {icon: 'facebook2', url: 'https://facebook.com/celestialbunny'},
         {icon: 'twitter', url: 'https://twitter.com/c0rOn4'},
