Style the about me section

--- a/src/_component/about-me/about-me.pug
+++ b/src/_component/about-me/about-me.pug
@@ -44,6 +44,6 @@
     .about-me__title=coolStuff.title
     .about-me__link-list
         each button in coolStuff.buttonList
-            a(href=button.url)
-                span=button.label
+            a.about-me__link(href=button.url, target="_blank")
+                span.about-me__link-description=button.label
                 span(class=`my-cv__icon--${button.icon}`)
