--- a/src/index.pug
+++ b/src/index.pug
@@ -6,3 +6,4 @@ block cool-config
 block awesome-content
     include _component/landing-page/landing-page.pug
     include _component/about-me/about-me.pug
+    include _component/award/award.pug
