--- a/src/_component/landing-page/landing-page.scss
+++ b/src/_component/landing-page/landing-page.scss
@@ -31,7 +31,7 @@
 }
 
 .landing-page__label {
-    color: white;
+    color: $color-white;
     padding: 0.1rem 0.3rem;
     font-size: 2rem;
     cursor: pointer;
@@ -57,7 +57,7 @@
 
 .landing-page__box-body {
     display: inline-block;
-    border: 0.2rem solid white;
+    border: 0.2rem solid $color-white;
     border-radius: 0.5rem;
     padding: 0.8rem;
     position: relative;
@@ -75,7 +75,7 @@
 
 .landing-page__box-info,
 .landing-page__box-close {
-    background: white;
+    background: $color-white;
     padding: 0.4rem;
     white-space: nowrap;
     line-height: 1.5rem;
@@ -98,7 +98,7 @@
 .landing-page__box-link,
 .landing-page__box-link:visited,
 .landing-page__box-message {
-    color: white;
+    color: $color-white;
 }
 
 .landing-page__box-link,
