--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,8 @@
 @import "_component/config/reset.scss";
 @import "_component/layout/layout.scss";
+@import "_component/config/common.scss";
+@import "_component/config/color.scss";
 @import "_component/font/icon-font.scss";
 @import "_component/landing-page/landing-page.scss";
 @import "_component/about-me/about-me.scss";
+@import "_component/award/award.scss";
